hphp/test/slow/traits/require_constraint_basic_error.php.expectf
HipHop Fatal error: Class 'C' required to extend class 'Super' by trait 'T1' (via use) in %s on line 24
